Still trying to fix PWA offline on iOS.

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,21 @@
     <title>Super Productivity</title>
 
     <meta
-      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
       name="viewport"
+    />
+    <!-- iOS PWA Support -->
+    <meta
+      name="apple-mobile-web-app-capable"
+      content="yes"
+    />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Super Productivity"
     />
     <link
       href="favicon.ico"
