--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,28 @@
       content="assets/icons/browserconfig.xml"
       name="msapplication-config"
     />
+    <!-- Preload critical fonts for better iOS PWA performance -->
+    <link
+      rel="preload"
+      href="assets/fonts/MaterialIcons-Regular.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="assets/fonts/open-sans/open-sans-latin-400-normal.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="assets/fonts/open-sans/open-sans-latin-700-normal.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <!-- Enable all requests and inline styles for painless development.
 TODO configure more restrictive Content-Security-Policy
 @see http://content-security-policy.com/
